--- a/aMuse.UI/aMuse.UI.csproj
+++ b/aMuse.UI/aMuse.UI.csproj
@@ -218,6 +218,9 @@
   <ItemGroup>
     <Resource Include="Icons\Back.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Web.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets" Condition="Exists('..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
