--- a/aMuse.UI/aMuse.UI.csproj
+++ b/aMuse.UI/aMuse.UI.csproj
@@ -184,12 +184,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icons\Fast Forward_52px.png" />
     <Resource Include="Icons\Music Folder_52px.png" />
     <Resource Include="Icons\Mute_52px.png" />
     <Resource Include="Icons\Pause_52px.png" />
-    <Resource Include="Icons\Play_52px.png" />
-    <Resource Include="Icons\Rewind_52px.png" />
     <Resource Include="Icons\Speaker_52px.png" />
     <Resource Include="Icons\Undo_52px.png" />
     <Resource Include="Icons\music-record-big.png" />
@@ -220,6 +217,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\Web.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Next.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Prev.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets" Condition="Exists('..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets')" />
