--- a/aMuse.UI/aMuse.UI.csproj
+++ b/aMuse.UI/aMuse.UI.csproj
@@ -227,6 +227,19 @@
   <ItemGroup>
     <Resource Include="Icons\Prev.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\RepeatON.png" />
+    <Resource Include="Icons\ShuffleON.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\ShuffleOFF.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\RepeatOFF.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Pause.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets" Condition="Exists('..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
